@@ -26,7 +26,9 @@ TITLE 0.96 Test Map
 HTMLOUTPUTFILE weathermap.html
 TITLEPOS 30 30
 
-KEYPOS DEFAULT 470 470 Traffic Load
+KEYPOS DEFAULT 470 30 Traffic Load
+KEYSTYLE DEFAULT inverted 500
+KEYFONT 10
 KEYTEXTCOLOR 0 0 0
 KEYOUTLINECOLOR 0 0 0
 KEYBGCOLOR 255 255 255
@@ -35,7 +37,7 @@ TITLECOLOR 0 0 0
 TIMECOLOR 0 0 0
 
 SCALE DEFAULT 0 0   192 192 192  
-SCALE DEFAULT 0 1   255 255 255  
+SCALE DEFAULT 0 1   255 255 128  
 SCALE DEFAULT 1 10   140 0 255  
 SCALE DEFAULT 10 25   32 32 255  
 SCALE DEFAULT 25 40   0 192 255  
@@ -403,7 +405,7 @@ LINK normal
 	TARGET tests/mrtg.html
 	INCOMMENT Some comment here
 	OUTCOMMENT Another comment there
-	COMMENTSTYLE centerline
+	COMMENTSTYLE center
 	NODES node00342 node80111
 	BANDWIDTH 30M
 
@@ -412,7 +414,7 @@ LINK test_uni
 	BWSTYLE angled
 	INNOTES in notes
 	OUTNOTES out notes
-	COMMENTSTYLE centerline
+	COMMENTSTYLE center
 	OUTCOMMENT Another comment there
 	OVERLIBGRAPH out.png out2.png out3.png
 	INBWFORMAT {link:this:inpercent:%.2f}%
